tests/errors/redeclaration1.f90
program redeclaration1
implicit none
integer :: idx1
real :: j, idx1
idx1 = 5
j = 6
print *, idx1, j
end program
